--- a/ise-lab-knowledge-representation.bib
+++ b/ise-lab-knowledge-representation.bib
@@ -1,13 +1,7 @@
-
-
-@manual{bibtex-patashnik88,
-	author = {Patashnik, Oren},
-	booktitle = {\BibTeXing},
-	date-added = {2021-07-06 17:51:32 +0200},
-	date-modified = {2021-07-06 18:13:21 +0200},
-	month = {8~} # feb,
-	organization = {CTAN, The Comprehensive TeX Archive Network},
-	title = {\BibTeX{}ing},
-	url = {http://mirrors.ctan.org/biblio/bibtex/base/btxdoc.pdf},
-	year = 1988,
-	Bdsk-Url-1 = {http://www.ctan.org/get/biblio/bibtex/contrib/doc/btxdoc.pdf}}
+@misc{enwiki:cons,
+	author = "{Wikipedia contributors}",
+	title = "Cons --- {Wikipedia}{,} The Free Encyclopedia",
+	year = "2021",
+	url = "https://en.wikipedia.org/w/index.php?title=Cons&oldid=1049428255",
+	note = "[Online; accessed 11-March-2022]"
+}
