--- a/ise-lab-knowledge-representation.sty
+++ b/ise-lab-knowledge-representation.sty
@@ -1,2 +1,45 @@
+\usepackage{multicol}
+\usepackage{amsmath,amssymb}
+\usepackage{todonotes}
+
 % ISE numbering
 \labN{1}
+
+\AtBeginSection[]
+{
+    \begin{frame}[c,noframenumbering]\frametitle{Next in Line\ldots}
+        %    \begin{multicols}{2}
+            \tableofcontents[sectionstyle=show/shaded, subsectionstyle=show/hide, subsubsectionstyle=hide/hide]
+            %    \end{multicols}
+    \end{frame}
+}
+
+\AtBeginSubsection[]
+{
+    \begin{frame}[c,noframenumbering]\frametitle{Next in Line\ldots}
+        %    \begin{multicols}{2}
+            \tableofcontents[sectionstyle=show/shaded, subsectionstyle=show/hide, subsubsectionstyle=hide/hide]
+            %    \end{multicols}
+    \end{frame}
+}
+
+\newcommand{\argmin}[2]{\underset{#1}{\text{argmin}} \left\{ #2 \right\}}
+\newcommand{\argmax}[2]{\underset{#1}{\text{argmax}} \left\{ #2 \right\}}
+\newcommand{\unify}[2]{\text{unify}(#1, #2)}
+\newcommand{\mgu}[2]{\text{mgu}(#1, #2)}
+\newcommand{\functor}[1]{\mathtt{#1}}
+\newcommand{\variable}[1]{\mathit{#1}}
+\newcommand{\predication}[1]{\mathit{#1}}
+\newcommand{\consdot}{\functor{~.~}}
+
+\newcommand{\grammar}[1]{\mathsf{#1}}
+\newcommand{\meta}[1]{\grammar{\left\langle#1\right\rangle}}
+\newcommand{\terminal}[1]{\text{`}\mathit{#1}\text{'}}
+\newcommand{\kleenestar}{^\grammar{*}}
+\newcommand{\plus}{\grammar{+}}
+\newcommand{\questionmark}{\grammar{?}}
+\newcommand{\onceormore}[1]{\grammar{(#1)}\plus}
+\newcommand{\severaltimes}[1]{\grammar{(#1)}\kleenestar}
+\newcommand{\optional}[1]{\grammar{(#1)}\questionmark}
+
+\newcommand{\twopkt}{\textsc{2P-Kt}}
