--- a/ise-lab-knowledge-representation.tex
+++ b/ise-lab-knowledge-representation.tex
@@ -1,5 +1,5 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% ISE Lab -- Topic
+% ISE Lab -- Knowledge Representation
 % Giovanni Ciatto
 % Alma Mater Studiorum - Università di Bologna
 % mailto:giovanni.ciatto@unibo.it
@@ -14,10 +14,10 @@
 % version
 \newcommand{\versionmajor}{0}
 \newcommand{\versionminor}{1}
-\newcommand{\versionpatch}{3-dev}
+\newcommand{\versionpatch}{4-dev}
 \newcommand{\version}{\versionmajor.\versionminor.\versionpatch}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\title[\currentLab{} -- Knowledge Representation]{Knowledge Representation}
+\title[\currentLab{} -- Knowledge Representation]{Knowledge Representation with Horn Clauses}
 %
 \subtitle{\courseName{} / Module \moduleN{} (\courseAcronym)}
 %
@@ -36,329 +36,630 @@
 %/////////
 
 %%===============================================================================
-%\section*{Outline}
+\section*{Outline}
 %%===============================================================================
 %
-%%/////////
-%\frame[c]{\tableofcontents[hideallsubsections]}
-%%/////////
+%/////////
+\frame[c]{\tableofcontents[hideallsubsections]}
+%/////////
 
 %===============================================================================
 \section{Premises}
 %===============================================================================
 
-%/////////
-\begin{frame}[c]{Academic Presentations}
-%
-\begin{itemize}
-	\item technical presentations are common in the academic environment
-	\item \alert{\LaTeX{}}\footnote{\uurl{http://latex.org}} is typically used for scientific literature
-	\begin{itemize}
-		\item for better formulas, bibliography, typography, \ldots
-	\end{itemize}
-	\item so, \LaTeX{} is the most typical \emph{toolbox} for scientific presentations
-	\begin{itemize}
-		\item which easily translates into teaching presentations, too
-	\end{itemize}
-\end{itemize}
-%
-\end{frame}
-%/////////
+\begin{frame}{Lecture Goals}
+    \begin{itemize}
+        \item Understand basic notions concerning \alert{Horn clauses}
+        %
+        \begin{itemize}
+            \item logic terms (constants, functions, variables)
+            \item logic clauses (facts, rules, goals)
+            \item unifiers and substitutions
+            \item unification and MGU
+        \end{itemize}
 
-%/////////
-\begin{frame}[c]{Beamer}
-%
-\begin{itemize}
-	\item \alert{Beamer} is a \LaTeX{} document class for creating presentation \emph{slides}, with a wide range of \emph{templates} and a set of features for making \emph{slideshow effects}
-	\begin{description}
-		\item[repo] \uurl{https://github.com/josephwright/beamer}
-		\item[CTAN] \uurl{https://ctan.org/pkg/beamer}
-	\end{description}
-	\item even though other styles for \LaTeX{} presentations exist, Beamer is by far the best way today
-\end{itemize}
-%
-\end{frame}
-%/////////
+        \vfill
 
-%/////////
-\begin{frame}[c]{AMS}
-%
-\begin{description}
-	\item[AMS] Alma Mater Studiorum--Università di Bologna
-	\item[Cesena] Campus of Cesena
-	\begin{itemize}
-		\item hence the AMS Cesena Campus logo on the bottom-left corner
-	\end{itemize}
-\end{description}
-%
-\end{frame}
-%/////////
+        \item Understand how these notions can be exploited for \alert{knowledge representation}
+        %
+        \begin{itemize}
+            \item data structures representation in logic
+            \item propositional vs. relational representations
+            \item extensional vs. intensional representations
+        \end{itemize}
 
-%/////////
-\begin{frame}[c]{Aim}
-%
-\begin{itemize}
-	\item many occasions for presentation
-	\item many different people in the group
-	\item a common reference could be useful
-	\item hence, this style
-	\item based on random Beamer styles, and using some references for the colours
-\end{itemize}
-%
-\end{frame}
-%/////////
+        \vfill
 
-%/////////
-\begin{frame}[c]{Who}
-%
-\begin{itemize}
-	\item mostly, myself
-	\item and, collaborators of mine---the \alert{good} ones \textcolor{bolognafcred}{\smiley{}}
-	\item everybody else, \emph{be my guest!}
-\end{itemize}
-%
+        \item Understand differences in expressiveness among different logics
+        %
+        \begin{itemize}
+            \item[eg] first-order logic vs. Horn clauses
+        \end{itemize}
+    \end{itemize}
 \end{frame}
-%/////////
+
+\begin{frame}{Motivations}
+    \begin{itemize}
+        \item Why Horn clauses?
+        %
+        \begin{itemize}
+            \item nice expressiveness-tractability trade-off
+            \item basis for Prolog, Datalogc and Logic Programming
+            \item very well established
+            %
+            \begin{itemize}
+                \item involved in tons of literature, theorems, technologies
+            \end{itemize}
+        \end{itemize}
+
+        \vfill
+
+        \item Why (symbolic) knowledge representation?
+        %
+        \begin{itemize}
+            \item pre-requisite for reifying many cognitive capabilities in software systems
+            %
+            \begin{itemize}
+                \item[eg] reasoning, planning, deliberation, etc.
+            \end{itemize}
+            \item pre-requisite for logic programing
+            \item both human- and machine-interpretable
+        \end{itemize}
+    \end{itemize}
+\end{frame}
+
+\begin{frame}[allowframebreaks]{Historical Overview}
+    \begin{enumerate}
+        \item In principle, it was first order logic (FOL)
+        %
+        \begin{itemize}
+            \item very expressive, very flexible
+            %
+            \begin{itemize}
+                \item[eg] (recursive) terms + variabiles + quantitiers + predicates + logic connectives
+            \end{itemize}
+
+            \item very hard to find a general \alert{resolution} algorithm for deciding the \alert{satisfiability} of any given FOL formula
+        \end{itemize}
+
+        \bigskip
+
+        \item In 1965, Robinson proposes the \alert{SL resolution principle}
+        %
+        \begin{itemize}
+            \item[ie] an algorithm for decising the \alert{unsatisfiability} of FOL formul\ae{} in \alert{Skolemized form}
+            %
+            \begin{itemize}
+                \item Skolem form $\approx$ all variables are \alert{universally} quantified at the beginning of the formula
+            \end{itemize}
+
+            \item SL = Selective Linear
+            \item logic \alert{unification} is a basic mechanism for the resolution principle
+        \end{itemize}
+
+        \framebreak
+
+        \item In 1974, Kowalski proposes the SL\alert{D} resolution procedure
+        %
+        \begin{itemize}
+            \item SL\alert{D} = Selective Linear [for] \alert{Definite} [clauses]
+            %
+            \begin{itemize}
+                \item definite clauses $\approx$ Horn clauses
+                \item[ie] very restricted subset of FOL, discussed in this lecture
+                %
+                \item[eg] no quantifiers, no negation, no connectors except conjunction and implication, \ldots
+            \end{itemize}
+        \end{itemize}
+
+        \bigskip
+
+        \item In the 1970s, first Prolog implementations appear
+        %
+        \begin{itemize}
+            \item essentially reifying the SLD procedure into a programming language
+            %
+            \begin{itemize}
+                \item cf. ``Fifty Years of Prolog and Beyond'' for the full history
+            \end{itemize}
+            \item that impacted virtually any subsequent logic/symbolic AI technology
+        \end{itemize}
+
+        \framebreak
+
+        \item In 1978, Clark proposes extends SLD with \alert{negation as failure} (NaF)
+        %
+        \begin{itemize}
+            \item adding well-founded negation support
+        \end{itemize}
+
+        \bigskip
+
+        \item In 1982, Martelli and Montanari propose an efficient algorithm for unification
+        %
+        \begin{itemize}
+            \item paving the way towards many sorts of automated reasoning algorithms / software
+        \end{itemize}
+
+        \bigskip
+
+        \item[$\vdots$]
+
+    \end{enumerate}
+\end{frame}
 
 %===============================================================================
-\section{Use}
+\section{Knowledge Representation}
 %===============================================================================
 
-%/////////
-\begin{frame}[c,allowframebreaks]{Files}
-%
-\begin{block}{Style files}
-The files
-\begin{itemize}
-	\item \texttt{beamercolorthemebolognafc.sty}
-	\item \texttt{beamerthemeAMSBolognaFC.sty}
-	\item \texttt{almacesena-background.pdf}
-\end{itemize}
-should be placed either in the local folder with the main \texttt{.tex} file, or, in your Beamer system directory, e.g.
-\begin{itemize}
-	\item \texttt{/Users/\{username\}/Library/texmf/tex/latex/local/beamer/}
-\end{itemize}
-\end{block}
-%
-\begin{block}{BST files}
-The files
-\begin{itemize}
-	\item \texttt{apalike-AMS.bst}
-\end{itemize}
-should be placed either in the local folder with the main \texttt{.tex} file, or, in your Beamer system directory, e.g.
-\begin{itemize}
-	\item \texttt{/Users/\{username\}/Library/texmf/bibtex/bst/local/}
-\end{itemize}
-\end{block}
-%
+\begin{frame}{Overview}
+    \begin{itemize}
+        \item Three main ingredients:
+        %
+        \begin{description}\small
+            \item[terms] --- for representing entities
+            \item[predicates] --- for representing statements about entities
+            \item[clauses] --- for representing properties of entities or relations among them
+        \end{description}
+
+        \vfill
+
+        \item Many ways of representing knowledge through them:
+        %
+        \begin{description}\small
+            \item[extensional vs. intensional] $\approx$ explicitly vs. implicitly
+            \item[propositional vs. relational] $\approx$ in tabular form vs. as a graph
+        \end{description}
+
+        \vfill
+
+        \item One powerful tool:
+        %
+        \begin{description}\small
+            \item[resolution] --- allowing for \alert{intensional} representations, programming, reasoning, \ldots
+        \end{description}
+
+        \vfill
+
+        \item Two fundamental mechanisms for manipulating knowledge:
+        %
+        \begin{description}\small
+            \item[substitution application] $\approx$ rewriting a formula by assigning variables
+            \item[most general unifier] $\approx$ computing the substitution making 2 formul\ae{} equal
+        \end{description}
+    \end{itemize}
 \end{frame}
-%/////////
 
-%/////////
-\begin{frame}[c,fragile]{Declaration}
-%
-\begin{block}{\texttt{\textbackslash{}documentclass}}
-Your main Beamer \texttt{.tex} file should open with the declaration
-%
-\begin{verbatim}
-    \documentclass[presentation]{beamer}
-        \mode<presentation>{\usetheme{AMSBolognaFC}}
-\end{verbatim}
-%
-so as to use the AMS Bologna FC Beamer style 
-\end{block}
-%
+\subsection{Terms}
+
+\begin{frame}[allowframebreaks]{Terms}
+    \begin{block}{Purpose}\centering
+        Terms are symbols representing entities from the \alert{domain of the discourse}
+    \end{block}
+    %
+    \begin{block}{Informal definition}
+        Terms can be
+        %
+        \begin{description}
+            \item[constants] --- denoting \alert{individual} / simple entities
+            \item[structures\footnote{a.k.a. functions}] --- denoting \alert{composed} / groups of entities
+            \item[variables] --- denoting \alert{placeholders} for / reference of \emph{unknown} entities
+        \end{description}
+    \end{block}
+    %
+    \begin{alertblock}{Formal syntax\hfill\textbf{\footnotesize(notice the syntactic convention!)}}\label{slide:terms}
+        \begin{center}
+            $\begin{array}{rcl}
+                \meta{Term} & := & \meta{Variable} \mid \meta{Structure} \mid \meta{Constant}
+                \\
+                \meta{Variable} & := & \variable{X}_1 \mid \variable{X}_2 \mid \variable{X}_3 \mid \ldots
+                \\
+                \meta{Structure} & := & \meta{Functor} \terminal{(} \meta{Arguments} \terminal{)}
+                \\
+                \meta{Functor} & := & \functor{f}_1 \mid \functor{f}_2 \mid \functor{f}_3 \mid \ldots
+                \\
+                \meta{Arguments} & := & \meta{Term} \mid \meta{Term} \terminal{,} \meta{Arguments}
+                \\
+                \meta{Constant} & := & \meta{Functor} \mid \meta{Number}\mid \meta{Boolean}
+                \\
+                \meta{Number} & := & \mathbb{R} \qquad \meta{Boolean} :=  \functor{true} \mid \functor{false}
+            \end{array}$
+        \end{center}
+        %
+        \begin{itemize}
+            \item $\mathcal{X} = \{ \variable{X}_1, \variable{X}_2, \variable{X}_3, \ldots \}$ is a set of \alert{variables names}
+            \item $\mathcal{F} = \{ \functor{f}_1, \functor{f}_2, \functor{f}_3, \ldots \}$ is a set of \alert{functors}\footnote{a.k.a. function names/symbols} of given \alert{arities}
+            \item $\mathbb{R}$ is the set of real numbers
+        \end{itemize}
+    \end{alertblock}
+
+    \begin{block}{Syntactical convention}
+        \begin{itemize}
+            \item $\variable{Variables}$ $\rightarrow$ capitalised italics
+            \item $\functor{Functor}$ $\rightarrow$ lowercase monospaced
+            \item $\meta{Non\text{-}terminal\ symbols}$ $\rightarrow$ sans-serif, wrapped by angular parenteses
+            %
+            \begin{itemize}
+                \item this is just for grammar definitions
+            \end{itemize}
+            \item $\mathcal{SYMBOLS\ SET}$ $\rightarrow$ uppercase calligraphic italics
+            %
+            \begin{itemize}
+                \item this is just for theoretical definitions
+            \end{itemize}
+        \end{itemize}
+    \end{block}
 \end{frame}
-%/////////
 
-%/////////
-\begin{frame}[c,fragile]{Bibliography Style}
-%
-\begin{block}{\texttt{apalike-AMS}}
-Your main Beamer \texttt{.tex} file should include the declaration
-\begin{verbatim}
-    \bibliographystyle{apalike-AMS}
-\end{verbatim}	
-so as to use the AMS Bologna FC \BibTeX{} style 
-\end{block}
-%
+\begin{frame}[allowframebreaks]{Example -- Peano Numbers}
+    \begin{exampleblock}{Definition: unary representation of natural numbers, via terms}
+        \begin{description}
+            \item[$\functor{z}$] $\rightarrow$ zero
+            \item[$\functor{s}(\variable{X})$] $\rightarrow$ the successor of some (unknown) number $\variable{X}$
+            \item[$\functor{s}(\functor{z})$] $\rightarrow$ the successor zero (a.k.a. 1)
+            \item[$\functor{s}(\functor{s}(\functor{z}))$] $\rightarrow$ the successor of the successor of zero (a.k.a. 2)
+            \item[$\functor{s}(\functor{s}(\functor{s}(\functor{z})))$] $\rightarrow$ the successor of \ldots
+        \end{description}
+    \end{exampleblock}
+    %
+    \begin{exampleblock}{Notice that, in this case:}
+        \begin{itemize}
+            \item $\functor{z}$ is a constant
+            \item $\variable{X}$ is a variable
+            \item $\functor{s}(\variable{X})$, $\functor{s}(\functor{z})$, etc. are structures
+            \item $\mathcal{F} = \{ \functor{s}, \functor{z} \}$ \hfill {\footnotesize(where $\functor{s}$ is a 1-ary functor, while $\functor{z}$ is 0-ary)}
+            \item $\mathcal{V} = \{ \functor{X} \}$
+        \end{itemize}
+    \end{exampleblock}
 \end{frame}
-%/////////
 
-%/////////
-\begin{frame}[c,fragile]{Template}
-%
-\begin{block}{\texttt{AMSBolognaFC-template.tex}}
-This template's sources can be used as a simple example of how yo use this Beamer style
-\end{block}
-%
+\begin{frame}[allowframebreaks]{Example -- Lists}
+    \begin{exampleblock}{Definition: (single-)linked lists\hfill\textbf{\footnotesize(LISP nomenclature\cccite{enwiki:cons})}}
+        \begin{description}
+            \item[$\functor{nil}$] $\rightarrow$ empty list
+            \item[$\functor{cons}(\variable{H}, \variable{T})$] $\rightarrow$ the list whose head is $\variable{H}$ and whose tail is $\variable{T}$
+            \item[$\functor{cons}(1, \variable{T})$] $\rightarrow$ the list whose first element is $1$ (and whose tail is $\variable{T}$)
+            \item[$\functor{cons}(1, \functor{nil})$] $\rightarrow$ the singleton list $[1]$
+            \item[$\functor{cons}(1, \functor{cons}(2, \functor{nil}))$] $\rightarrow$ the list $[1,2]$
+            \item[$\functor{cons}(1, \functor{cons}(2, \functor{cons}(3, \functor{nil})))$] $\rightarrow$ the list $[1,2,3]$
+        \end{description}
+    \end{exampleblock}
+    %
+    \begin{exampleblock}{Notice that, in this case:}
+        \begin{itemize}
+            \item $\functor{nil}$ is a constant
+            \item $\variable{H}$ and $\variable{T}$ are variables
+            \item $\functor{cons}(\variable{H}, \variable{T})$, etc. are structures
+            \item $\mathcal{F} = \{ \functor{nil}, \functor{cons} \}$ \hfill {\footnotesize(where $\functor{cons}$ is a binary functor, while $\functor{nil}$ is 0-ary)}
+            \item $\mathcal{V} = \{ \variable{H}, \variable{T}\}$
+        \end{itemize}
+    \end{exampleblock}
+    %
+    \begin{alertblock}{Fun fact: in Prolog\dots}
+        \begin{itemize}
+            \item the constant `\alert{$\functor{[]}$}' is used in place of `\alert{$\functor{nil}$}'
+            \item the binary functor `\alert{$\functor{.}$}' is used in place of `\alert{$\functor{cons}$}'
+            \item `\alert{\pl{[$\variable{H}$ | $\variable{T}$]}}' is syntactic sugar for `\alert{\pl{.($\variable{H}$, $\variable{T}$)}}'
+            \item `\alert{\pl{[1, 2, 3]}}' is syntactic sugar for `\alert{\pl{.(1, .(2, .(3, [])))}}'
+        \end{itemize}
+    \end{alertblock}
 \end{frame}
-%/////////
 
+\subsubsection{Ancillary definitions}
 
-%===============================================================================
-\section{Style}
-%===============================================================================
+\begin{frame}[allowframebreaks]{Groundness}
+    \begin{block}{Informal definition}\centering
+        A term is \alert{ground} iff it has (i.e. contains) no variable
+    \end{block}
 
-%/////////
-\begin{frame}[c,allowframebreaks]{Colours for AMS Bologna FC}
-%
-\begin{exampleblock}{\texttt{\textcolor{bolognafcblue}{bolognafcblue}}}
-	\begin{description}
-		\item[HEX] \texttt{\#1A2F48}
-		\item[RGB] \texttt{26,47,72}
-	\end{description}
-\end{exampleblock}
-\begin{exampleblock}{\texttt{\textcolor{bolognafcred}{bolognafcred}}}
-	\begin{description}
-		\item[HEX] \texttt{\#A21C26}
-		\item[RGB] \texttt{162,28,38}
-	\end{description}
-\end{exampleblock}
-\framebreak
-\begin{block}{\texttt{\textcolor{bolognafcwhite}{bolognafcwhite}}}
-	\begin{description}
-		\item[HEX] \texttt{\#FFFFFF}
-		\item[RGB] \texttt{255,255,255}
-	\end{description}
-\end{block}
-\begin{alertblock}{\texttt{\textcolor{bolognafcsilver}{bolognafcsilver}}}
-	\begin{description}
-		\item[HEX] \texttt{\#ECECEC}
-		\item[RGB] \texttt{236,236,236}
-	\end{description}
-\end{alertblock}
-%
+    \begin{alertblock}{Inductive definition}
+        \begin{itemize}
+            \item Any variable $X$ is \emph{not} ground
+            \item Any constant $\functor{c}$ is ground
+            \item Any $n$-ary structure $\functor{f}(t_1, \ldots, t_n)$ is ground iff \emph{all} terms $t_i$ are ground
+        \end{itemize}
+    \end{alertblock}
+
+    \begin{exampleblock}{Some examples}
+        \begin{description}
+            \item[$\functor{z}$] and \alert{$\functor{nil}$} $\rightarrow$ ground
+            \item[$\functor{s}(\variable{X})$] $\rightarrow$ non-ground
+            \item[$\functor{s}(\functor{z})$] $\rightarrow$ ground
+            \item[$\functor{s}(\functor{s}(\functor{z}))$] $\rightarrow$ ground
+            \item[$\functor{s}(\functor{s}(\functor{s}(\variable{X})))$] $\rightarrow$ non-ground
+            \item[$\functor{cons}(\variable{H}, \variable{T})$] $\rightarrow$ non-ground
+            \item[$\functor{cons}(1, \variable{T})$] $\rightarrow$ non-ground
+            \item[$\functor{cons}(1, \functor{nil})$] $\rightarrow$ ground
+            \item[$\functor{cons}(1, \functor{cons}(2, \variable{X}))$] $\rightarrow$ non-ground
+            \item[$\functor{cons}(1, \functor{cons}(\variable{X}, \functor{cons}(3, \functor{nil})))$] $\rightarrow$ non-ground
+        \end{description}
+    \end{exampleblock}
 \end{frame}
-%/////////
 
-%/////////
-\begin{frame}[c,fragile]{Blocks}
-%
-\begin{block}{This is a \texttt{block} environment}
-\begin{verbatim}
-\begin{block}
-...
-\end{block}
-\end{verbatim}
-\end{block}
-%
-\begin{exampleblock}{This is an \texttt{exampleblock} environment}
-\begin{verbatim}
-\begin{exampleblock}
-...
-\end{exampleblock}
-\end{verbatim}
-\end{exampleblock}
-%
-\begin{alertblock}{This is an \texttt{alertblock} environment}
-\begin{verbatim}
-\begin{alertblock}
-...
-\end{alertblock}
-\end{verbatim}
-\end{alertblock}
-%
+\begin{frame}[allowframebreaks]{Herbrand Universe}
+    \begin{block}{Informal definition}
+        The set of all items which can be represented as terms
+        %
+        \begin{itemize}
+            \item attained by applying all $n$-ary functors to all possible terms, recursively
+        \end{itemize}
+    \end{block}
+
+    \begin{alertblock}{Inductive definition}
+        Let $\mathcal{F}$ be the set of all $n$-ary functors s.t. $n \geq 0$ (including constants)
+        %
+        \begin{itemize}
+            \item let $\mathcal{H}_0$ be the set of all constants in $\mathcal{F}$
+            \item let $\mathcal{H}_1$ be $\mathcal{H}_0 \cup \{ f(t_1, \ldots, t_n) \mid \forall f \in \mathcal{F}, \forall t_1, \ldots, t_n \in \mathcal{H}_0 \}$
+            \item $\vdots$
+            \item let $\mathcal{H}_{i+1}$ be $\mathcal{H}_i \cup \{ f(t_1, \ldots, t_n) \mid \forall f \in \mathcal{F}, \forall t_1, \ldots, t_n \in \mathcal{H}_i \}$
+            \item $\vdots$
+            \item then $\mathcal{H}_\infty$ is the Herbrand universe (spawned by $\mathcal{F}$)
+        \end{itemize}
+    \end{alertblock}
+
+    \framebreak
+
+    \begin{exampleblock}{Example for Peano numbers ($\mathcal{F} = \{ \functor{z}/0, \functor{s}/1 \}$)}
+        \begin{itemize}
+            \item $\functor{z}$
+            \item $\functor{s}(\functor{z})$
+            \item $\functor{s}(\functor{s}(\functor{z}))$
+            \item $\functor{s}(\functor{s}(\functor{s}(\functor{z})))$
+            \item[$\vdots$]
+        \end{itemize}
+    \end{exampleblock}
+
+    \begin{exampleblock}{Example for lists ($\mathcal{F} = \{ \functor{nil}/0, \functor{cons}/2 \}$)}
+        \begin{itemize}
+            \item $\functor{nil}$
+            \item $\functor{cons}(\functor{nil}, \functor{nil})$
+            \item $\functor{cons}(\functor{cons}(\functor{nil}, \functor{nil}), \functor{nil})$
+            \item $\functor{cons}(\functor{nil}, \functor{cons}(\functor{nil}, \functor{nil}))$
+            \item $\functor{cons}(\functor{cons}(\functor{nil}, \functor{nil}), \functor{cons}(\functor{nil}, \functor{nil}))$
+            \item[$\vdots$]
+        \end{itemize}
+    \end{exampleblock}
+
+    \begin{alertblock}{Important take away}
+        As soon as $\mathcal{F}$ contains \emph{at least}
+        %
+        \begin{itemize}
+            \item one constant
+            \item and one $n$-ary functor s.t. $n>0$
+        \end{itemize}
+        %
+        the Herbrand base becomes of \alert{infinite} cardinality
+    \end{alertblock}
+
+    \begin{block}{Herbrand of \textbf{infinite} cardinality: implications}
+        \begin{itemize}
+            \item infinitely many terms can be represented
+            \item attempts to enumerate them all won't terminate
+            \item attempts to store them all will saturate the space
+        \end{itemize}
+    \end{block}
 \end{frame}
-%/////////
 
-%===============================================================================
-\section{New Commands}
-%===============================================================================
+\begin{frame}
+    \todo[inline]{Exercise on term construction in \twopkt{}}
 
-%/////////
-\begin{frame}[c,allowframebreaks,fragile]{Citations}
-%
-\begin{alertblock}{\texttt{\textbackslash{}ccite} command---e.g., \ccite{bibtex-patashnik88}}
-\begin{verbatim}
-\ccite{bibtex-patashnik88}
-\end{verbatim}
-\begin{itemize}
-	\item to be used instead of standard \texttt{\textbackslash{}cite} command
-	\item prints as \ccite{bibtex-patashnik88}
-	\item can be used as a note\ccite{bibtex-patashnik88}, with no space before
-\end{itemize}
-\end{alertblock}
-%
-\begin{exampleblock}{\texttt{\textbackslash{}cccite} command---e.g., \cccite{bibtex-patashnik88}}
-\begin{verbatim}
-\cccite{bibtex-patashnik88}
-\end{verbatim}
-\begin{itemize}
-	\item a lighter version of the \texttt{\textbackslash{}ccite} command over non-dark, non-light backgrounds
-	\begin{itemize}
-		\item as here above in \texttt{examplebox} header
-	\end{itemize}
-	\item can be used as a note with no space before, in the same way as \texttt{\textbackslash{}ccite}
-\end{itemize}
-\end{exampleblock}
-%
+    \todo[inline]{Exercise on the construction of the first $N$ of the Herbrand universe for a given set of functors}
 \end{frame}
-%/////////
 
-%/////////
-\begin{frame}[c,fragile]{URLs}
-%
-\begin{block}{\texttt{\textbackslash{}uurl} command}
-\begin{itemize}
-	\item to be used instead of standard \texttt{\textbackslash{}url} command
-	\item[e.g.] \verb|\uurl{http://apice.unibo.it}| prints as \uurl{http://apice.unibo.it}
-\end{itemize}
-\end{block}
-%
-\begin{block}{\texttt{\textbackslash{}uuurl} command---e.g., \uuurl{http://apice.unibo.it}}
-\begin{itemize}
-	\item to be used instead of standard \texttt{\textbackslash{}url} command over dark backgrounds
-	\item[e.g.] see \verb|\uuurl{http://apice.unibo.it}| above in this \texttt{block} header
-\end{itemize}
-\end{block}
-%
+\subsection{Predicates}
+
+\begin{frame}[allowframebreaks]{Predicates}
+    \begin{block}{Purpose}\centering
+        Asserting statements about entities from the \alert{domain of the discourse}
+    \end{block}
+    %
+    \begin{block}{Informal definition}
+        A \alert{statement} about $n\geq 0$ \alert{terms}, which may or may not hold true
+    \end{block}
+    %
+    \begin{alertblock}{Formal syntax\hfill\textbf{\footnotesize(notice the syntactic convention!)}}
+        $$\begin{array}{rcl}
+            \meta{Predicate} & := & \top \mid \bot \mid \meta{Predication} \mid \meta{Predication} \terminal{(} \meta{Arguments} \terminal{)}
+            \\
+            \meta{Predication} & := & \predication{p}_1 \mid \predication{p}_2 \mid \predication{p}_3 \mid \ldots
+            \\
+            \meta{Arguments} & := & \meta{Term} \mid \meta{Term} \terminal{,} \meta{Arguments}
+            \\
+            \meta{Term} & := & \text{see slide \ref{slide:terms}}
+        \end{array}$$
+        %
+        \begin{itemize}
+            \item $\mathcal{P} = \{ \predication{p}_1, \predication{p}_2, \predication{p}_3, \ldots \}$ is a set of \alert{predications}\footnote{a.k.a. predicate names/symbols} of given \alert{arities}
+            \item \alert{$\top$} denotes the predicate which \alert{always} holds true (a.k.a. \alert{tautology})
+            \item \alert{$\bot$} denotes the predicate which \alert{never} holds true (a.k.a. \alert{contradiction})
+        \end{itemize}
+    \end{alertblock}
+    %
+    \begin{block}{Syntactical convention}
+        \begin{itemize}
+            \item $\predication{predication}$ $\rightarrow$ lowercase italics
+        \end{itemize}
+    \end{block}
 \end{frame}
-%/////////
 
-%/////////
-\begin{frame}[c,fragile]{Alert}
-%
-\begin{block}{\texttt{\textbackslash{}aalert} command---e.g., \aalert{alerted text}}
-\begin{itemize}
-	\item to be used instead of standard \texttt{\textbackslash{}alert} command over dark backgrounds
-	\item[e.g.] see \verb|\aalert{alerted text}| above in this \texttt{block} header
-\end{itemize}
-\end{block}
-%
+\begin{frame}{Example -- Peano numbers}
+    \begin{block}{Assumptions}
+        \begin{itemize}
+            \item $\mathcal{P} = \{ \predication{nat}, \predication{succ} \}$ \hfill {\footnotesize(where $\predication{nat}$ is a 1-ary predication, while $\predication{succ}$ is binary)}
+            \item $\predication{nat}$ states that a term denotes a \alert{natural} number
+            \item $\predication{succ}$ states that a term is the \alert{natural} of another one
+            %
+            \begin{itemize}
+                \item provided that they are both natural numbers
+            \end{itemize}
+        \end{itemize}
+    \end{block}
+    %
+    \begin{exampleblock}{Some possible predicates}
+        \begin{description}
+            \item[$\predication{nat}(\functor{z})$] $\rightarrow$ zero is a natural number
+            \item[$\predication{nat}(\functor{s}(\variable{X}))$] $\rightarrow$ given some term $X$, the term $\functor{s}(\variable{X})$ is a natural number
+            \item[$\predication{nat}(\functor{s}(\functor{z}))$] $\rightarrow$ one is a natural number
+            \item[$\predication{succ}(\functor{s}(\functor{z}), \functor{z})$] $\rightarrow$ one is the successor of zero
+            \item[$\predication{succ}(\functor{s}(\variable{X}), \variable{X})$] $\rightarrow$ given some term $X$, the term $\functor{s}(\variable{X})$ its successor
+        \end{description}
+    \end{exampleblock}
 \end{frame}
-%/////////
 
-%/////////
-\begin{frame}[c,fragile,allowframebreaks]{Speaker(s) \emph{vs.} Authors}
-%
-\begin{exampleblock}{\texttt{\textbackslash{}speaker} command--e.g., \speaker{Diego Zorro}}
-\begin{itemize}
-	\item to be used within \texttt{\textbackslash{}author} standard \BibTeX{} command to single out the actual speaker among the authors
-	\item[e.g.] as in
-\begin{verbatim}
-	\author[Garcia \and Zorro]
-	{Sarg Garcia \and \speaker{Diego Zorro}}
-\end{verbatim}
-	\item and in the author specification of this template
-\end{itemize}
-\end{exampleblock}
-%
-\begin{block}{\texttt{\textbackslash{}sspeaker} command--e.g., \sspeaker{Diego Zorro}}
-\begin{itemize}
-	\item to be used within \texttt{\textbackslash{}author} standard \BibTeX{} command to single out the actual speaker among the authors in the short form
-	\item[e.g.] as in
-\begin{verbatim}
-	\author[Garcia \and \sspeaker{Zorro}]
-	{Sarg Garcia \and \speaker{Diego Zorro}}
-\end{verbatim}
-	\item and in the author specification of this template
-\end{itemize}
-\end{block}
-
+\begin{frame}{Example -- Lists}
+    \begin{block}{Assumptions}
+        \begin{itemize}
+            \item $\mathcal{P} = \{ \predication{list}, \predication{head} \}$ \hfill {\footnotesize(where $\predication{list}$ is a 1-ary predication, while $\predication{head}$ is binary)}
+            \item $\predication{list}$ states that a term denotes a \alert{list}
+            \item $\predication{head}$ states that a term is the \alert{head} of another one
+            %
+            \begin{itemize}
+                \item provided that the latter is a list
+            \end{itemize}
+        \end{itemize}
+    \end{block}
+    %
+    \begin{exampleblock}{Some possible predicates}
+        \begin{description}
+            \item[$\predication{list}(\functor{nil})$] $\rightarrow$ the empty list is a list
+            \item[$\predication{list}(\functor{cons}(\variable{H}, \functor{nil}))$] $\rightarrow$ given some term $H$, the term $\functor{cons}(\variable{H}, \functor{nil})$ is a list
+            \item[$\predication{list}(\functor{cons}(\variable{H}, \variable{T}))$] $\rightarrow$ given some terms $H, T$, the term $\functor{cons}(\variable{H}, \variable{T})$ is a list
+            \item[$\predication{head}(\variable{H}, \functor{cons}(\variable{H}, \functor{nil}))$] $\rightarrow$ $H$ is the head of the list $\functor{cons}(\variable{H}, \functor{nil})$
+            \item[$\predication{head}(\variable{H}, \functor{cons}(\variable{H}, \variable{T}))$] $\rightarrow$ $H$ is the head of the list $\functor{cons}(\variable{H}, \variable{T})$
+        \end{description}
+    \end{exampleblock}
 \end{frame}
-%/////////
 
+\begin{frame}{Important Remark}
+    \begin{alertblock}{Predicates vs. structures}
+        \begin{itemize}
+            \item predicate and structures have a \emph{very} similar \alert{syntax}
+            \item however, they are deeply different, \alert{semantically}
+            %
+            \begin{description}
+                \item[terms] represent entities from the domain of the discourse
+                %
+                \begin{itemize}
+                    \item they just exist
+                \end{itemize}
+
+                \item[predicates] represent statements about those entities
+                %
+                \begin{itemize}
+                    \item they can either be true or false
+                \end{itemize}
+            \end{description}
+        \end{itemize}
+    \end{alertblock}
+\end{frame}
+
+\begin{frame}{Predicates and their arities}
+
+    \begin{description}
+        \item[0-ary predicate] (a.k.a. \alert{proposition}): denotes a statement which may either hold or not
+        %
+        \begin{itemize}
+            \item e.g. ``it's raining''
+        \end{itemize}
+
+        \vfill
+
+        \item[1-ary predicate] (a.k.a. \alert{set} or \alert{type}): denotes a group of items characterised by a given property
+        %
+        \begin{itemize}
+            \item e.g. ``the set of even numbers''
+            %
+            \begin{itemize}
+                \item[ie] ``the set of all numbers $X$ such that $X$ is a multiple of 2''
+            \end{itemize}
+        \end{itemize}
+
+        \vfill
+
+        \item[$n$-ary predicate] (a.k.a. \alert{relation}): denotes a relationship holding among $n$ entities
+        %
+        \begin{itemize}
+            \item i.e. a group of $n$-uples characterised by a given property
+
+            \item e.g. ``parenthood'' (binary relation)
+            %
+            \begin{itemize}
+                \item[ie] ``the set of all pairs $(X, Y)$ such that $Y$ is a child of $X$''
+            \end{itemize}
+
+            \item e.g. ``students' yearly school reports'' (ternary relation)
+            %
+            \begin{itemize}
+                \item[ie] ``the set of all triplets $(X, Y, Z)$ such that $X$ is a student, $Y$ is a course, and $Z$ is the mark of $X$ in $Y$''
+            \end{itemize}
+        \end{itemize}
+    \end{description}
+\end{frame}
+
+\subsection{Horn Clauses}
+
+\begin{frame}[allowframebreaks]{Horn Clauses}
+    \begin{block}{Purpose}\centering
+        Defining (a.k.a. expressing, writing) \alert{propositions}, \alert{sets}, or \alert{relations} concerning the entities of the \alert{domain of the discourse}
+    \end{block}
+    %
+    \begin{block}{Informal definition}
+        Horn clauses are logic formul\ae{} of three sorts:
+        %
+        \begin{description}
+            \item[facts] --- denoting predicates which are known to hold
+            \item[rules\footnote{a.k.a. definite clauses}] --- denoting that a predicate holds true if a number of other predicates hold true
+            \item[goals\footnote{a.k.a. directives}] --- denoting a number of predicates to be proven (either true or false)
+        \end{description}
+    \end{block}
+    %
+    \begin{block}{Formal definition (pt. 1)}
+        Horn clauses are logic statements of the form
+        %
+        \begin{center}
+            $\overbrace{\underbrace{\phi}_{\text{positive literal}} \vee \underbrace{\neg\psi_1 \vee \ldots \vee \neg \psi_n}_{\text{negative literals}}}^{\text{disjunction form}}$
+            \qquad $\equiv$\footnote{$(\neg a \vee b) \equiv (a \Rightarrow b)$, cf. \uuurl{http://discrete.openmathbooks.org/dmoi3/sec_propositional.html}} \qquad
+            $\overbrace{\underbrace{\phi}_{\text{head}} \Leftarrow \underbrace{\psi_1 \wedge \ldots \wedge \psi_n}_{\text{body}}}^\text{implication form}$
+        \end{center}
+        %
+        \begin{itemize}
+            \item[ie] a \alert{disjunction} of \alert{literals} where \emph{at most} one literal is non-negated
+            %
+            \begin{itemize}
+                \item[aka] an \alert{implication} having \emph{at most} 1 post-condition (the \alert{head}) and $n$ pre-conditions in conjunction (the \alert{the body})
+            \end{itemize}
+            \item where literals $\phi, \psi_1, \ldots, \psi_n$ are \alert{predicates} of any arity
+            %
+            \begin{itemize}
+                \item possibly involving terms of any sorts
+            \end{itemize}
+        \end{itemize}
+    \end{block}
+    %
+    %
+    \begin{block}{Formal definition (pt. 2)}
+        Given a Horn clause $\phi \Leftarrow \psi_1 \wedge \ldots \wedge \psi_n$, it is
+        %
+        \begin{itemize}
+            \item a \alert{goal} iff $\phi \equiv \bot$
+            %
+            \begin{itemize}
+                \item[ie] when the head is a contradiction (a.k.a no head)
+                \item then the clause is written as `$\Leftarrow \psi_1 \wedge \ldots \wedge \psi_n$'
+            \end{itemize} 
+
+            \item a \alert{fact} if $n = 1$ and $\psi_1 = \top$
+            %
+            \begin{itemize}
+                \item[ie] when the head is a tautology (a.k.a no body)
+                \item then the clause is written as `$\phi$'
+            \end{itemize} 
+
+            \item a \alert{rule} otherwise 
+        \end{itemize}
+    \end{block}
+\end{frame}
 
 %===============================================================================
 \section*{}
@@ -378,10 +679,10 @@ This template's sources can be used as a simple example of how yo use this Beame
 \begin{frame}[c,noframenumbering]{\refname}
 %\begin{frame}[t,allowframebreaks,noframenumbering]{\refname}
 %	\tiny
-	\scriptsize
+    \scriptsize
 %	\footnotesize
-	\bibliographystyle{apalike-AMS}
-	\bibliography{ise-lab-knowledge-representation}
+    \bibliographystyle{apalike-AMS}
+    \bibliography{ise-lab-knowledge-representation}
 \end{frame}
 %/////////
 
